# chiaki-android-bridge

./: .gitmodules  CHIAKI_VERSION  CMakeLists.txt  NOTICES  README.md  chiaki-jni.c  utils.h
kotlin/: PsRemotePlayConfigActivity.kt  PsRemotePlayOutput.kt
